--- a/.config/.gitignore
+++ b/.config/.gitignore
@@ -1,9 +1,18 @@
 *
-!*/
 !.gitignore
-!polybar
-!zsh
-!X11
-!git
-!doom
-emacs
+
+!doom/
+!doom/**
+
+!polybar/
+!polybar/**
+
+!zsh/
+!zsh/**
+zsh/.zcompdump
+
+!git/
+!git/**
+
+!X11/
+!X11/**
