Overhaul polybar setup

--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -12,7 +12,7 @@ interval = 0.5
 ;   <ramp-coreload>
 format = <label>
 
-format-prefix = " "
+format-prefix = ${cpu.fp}
 format-prefix-foreground = ${colors.b6}
 
 ; Available tokens:
