--- a/.config/polybar/modules/date.ini
+++ b/.config/polybar/modules/date.ini
@@ -5,7 +5,7 @@ type = internal/date
 ; Default: 1.0
 interval = 10
 
-format-prefix = " "
+format-prefix = ${date.fp}
 format-prefix-foreground = ${colors.b6}
 
 label = %time%
