--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -6,6 +6,6 @@ type = internal/memory
 interval = 1
 
 format = <label>
-format-prefix = " "
+format-prefix = ${memory.fp}
 format-prefix-foreground = ${colors.b6}
 label = %mb_used%
