--- a/.config/polybar/modules/sound.ini
+++ b/.config/polybar/modules/sound.ini
@@ -57,22 +57,22 @@ label-volume = %percentage%%
 
 ; Available tokens:
 ;   %percentage% (default
-format-muted-prefix = 
+format-muted-prefix = ${sound.fmp}
 format-muted-prefix-foreground = ${colors.b6}
 ramp-volume-foreground = ${colors.b6}
-label-muted = "  M"
+label-muted = ${sound.lm}
 label-muted-foreground = ${colors.fg}
 
 ; Only applies if <ramp-volume> is used
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
+ramp-volume-0 = ${sound.rv0}
+ramp-volume-1 = ${sound.rv1}
+ramp-volume-2 = ${sound.rv1}
+ramp-volume-3 = ${sound.rv1}
+ramp-volume-4 = ${sound.rv4}
 
 ; If defined, it will replace <ramp-volume> when
 ; headphones are plugged in to `headphone_control_numid`
 ; If undefined, <ramp-volume> will be used for both
 ; Only applies if <ramp-volume> is used
-ramp-headphones-0 = 
-ramp-headphones-1 = 
+ramp-headphones-0 = ${sound.rh0}
+ramp-headphones-1 = ${sound.rh0}
