--- a/.config/polybar/modules/space.ini
+++ b/.config/polybar/modules/space.ini
@@ -22,7 +22,7 @@ spacing = 4
 ;   <bar-used>
 ;   <ramp-capacity>
 format-mounted = <label-mounted>
-format-mounted-prefix = " "
+format-mounted-prefix = ${space.fmp}
 format-mounted-prefix-foreground = ${colors.b6}
 ; Available tags:
 ;   <label-unmounted> (default)
