--- a/.config/polybar/modules/temperature.ini
+++ b/.config/polybar/modules/temperature.ini
@@ -57,8 +57,8 @@ label-warn-foreground = ${colors.red}
 ; The icon selection will range from `base-temperature` to `warn-temperature`,
 ; temperatures above `warn-temperature` will use the last icon
 ; and temperatures below `base-temperature` will use `ramp-0`
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+ramp-0 = ${temperature.r0}
+ramp-1 = ${temperature.r1}
+ramp-2 = ${temperature.r2}
 ;Alternate (Cozette):
 ramp-foreground = ${colors.b6}
