--- a/.config/polybar/bar-right.ini
+++ b/.config/polybar/bar-right.ini
@@ -11,6 +11,12 @@
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+;; Includes
+include-file = /home/demis/.config/polybar/common.ini
+include-file = /home/demis/.config/polybar/fonts/fonts-bitmap.ini
+include-file = /home/demis/.config/polybar/icons/icons-bitmap.ini
+include-file = /home/demis/.config/polybar/modules/network.ini
+
 ;; Bar Settings
 
 [bar/right]
@@ -100,17 +106,6 @@ padding = 2
 ;   module-margin-{left,right}
 module-margin-left = 2
 module-margin-right = 2
-
-; Fonts are defined using <font-name>;<vertical-offset>
-; Font names are specified using a fontconfig pattern.
-;   font-0 = NotoSans-Regular:size=8;2
-;   font-1 = MaterialIcons:size=10
-;   font-2 = Termsynu:size=8;-1
-;   font-3 = FontAwesome:size=10
-; See the Fonts wiki page for more details
-
-font-0 = "Cozette:size=10;1"
-font-1 = "waffle:size10;1"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
