--- a/.config/polybar/bar-single.ini
+++ b/.config/polybar/bar-single.ini
@@ -13,18 +13,22 @@
 
 ;; Includes
 include-file = /home/demis/.config/polybar/common.ini
-include-file = /home/demis/.config/polybar/fonts/fonts-bitmap.ini
-include-file = /home/demis/.config/polybar/icons/icons-bitmap.ini
-include-file = /home/demis/.config/polybar/modules/network.ini
+include-file = /home/demis/.config/polybar/icons/icons-ttf.ini
+include-file = /home/demis/.config/polybar/fonts/fonts-ttf.ini
+include-file = /home/demis/.config/polybar/modules/wifi.ini
+include-file = /home/demis/.config/polybar/modules/battery.ini
 
 ;; Bar Settings
+[bar/single]
 
-[bar/left]
+font-0 = ${fonts.font-0}
+font-1 = ${fonts.font-1}
+
 ; Use either of the following command to list available outputs:
 ; If unspecified, the application will pick the first one it finds.
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-monitor = DP-0.8
+monitor =
 
 ; Use the specified monitor as a fallback if the main one is not found.
 monitor-fallback =
@@ -48,7 +52,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 24
+height = 30
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -105,7 +109,7 @@ padding = 2
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
 module-margin-left = 2
-module-margin-right = 2
+module-margin-right = 1
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -132,7 +136,7 @@ module-margin-right = 2
 
 modules-left = exwm
 ;modules-center = exwm
-;modules-right = space cpu memory temperature date
+modules-right = packages network space cpu memory temperature alsa battery date
 
 ; The separator will be inserted between the output of each module
 separator =
@@ -163,7 +167,7 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = none
+tray-position = center
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
@@ -207,7 +211,7 @@ tray-scale = 1.0
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
-; dpi =
+ dpi = 72
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
