--- a/.config/polybar/modules/packages.ini
+++ b/.config/polybar/modules/packages.ini
@@ -1,8 +1,8 @@
 [module/packages]
 type = custom/script
 exec = pacman -Qu | wc -l
-interval 60
+interval = 60
 format = <label>
-format-prefix = " "
+format-prefix = ${packages.fp}
 format-prefix-foreground = ${colors.b6}
 label = %output%
