--- a/.config/polybar/modules/wifi.ini
+++ b/.config/polybar/modules/wifi.ini
@@ -3,7 +3,7 @@ type = internal/network
 ; Name of the network interface to display. You can get the names of the
 ; interfaces on your machine with `ip link`
 ; Wireless interfaces often start with `wl` and ethernet interface with `eno` or `eth`
-interface = enp3s0
+interface = wlp1s0
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -57,24 +57,25 @@ format-packetloss = <animation-packetloss> <label-connected>
 ;   %linkspeed% [wired]
 
 ; Default: %ifname% %local_ip%
-label-connected = %ifname%
-label-connected-foreground = #eefafafa
+label-connected = %essid%
+label-connected-alt = %ifname%
+label-connected-foreground = ${colors.fg}
 
 ; Default: (none)
 label-disconnected = %ifname%
-format-disconnected-prefix = ${network.fdp}
+format-disconnected-prefix = ${wifi.fdp}
 format-disconnected-prefix-foreground = ${colors.b6}
 ; Default: (none)
 ;label-packetloss = %essid%
 ;label-packetloss-foreground = #eefafafa
 
 ; Only applies if <ramp-signal> is used
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-ramp-signal-5 = 
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+ramp-signal-5 = 
 ramp-signal-foreground = ${colors.b6}
 
 ; Only applies if <animation-packetloss> is used
