Adjust polybar config

--- a/.config/polybar/icons/icons-bitmap.ini
+++ b/.config/polybar/icons/icons-bitmap.ini
@@ -1,19 +1,19 @@
-[bitmap/cpu]
+[cpu]
 fp = " "
 
-[bitmap/date]
+[date]
 fp = " "
 
-[bitmap/memory]
+[memory]
 fp = " "
 
-[bitmap/network]
+[network]
 fdp = " "
 
-[bitmap/packages]
+[packages]
 fp = " "
 
-[bitmap/sound]
+[sound]
 fmp = 
 lm = " M"
 rv0 = 
@@ -21,10 +21,10 @@ rv1 = 
 rv4 = 
 rh0 = 
 
-[bitmap/space]
+[space]
 fmp = " "
 
-[bitmap/temperature]
+[temperature]
 r0 = 
 r1 = 
 r2 = 
