--- a/.config/polybar/modules/network.ini
+++ b/.config/polybar/modules/network.ini
@@ -18,7 +18,8 @@ interval = 3.0
 ; @deprecated: Define min width using token specifiers (%downspeed:min% and %upspeed:min%)
 ; Minimum output width of upload/download rate
 ; Default: 3
-udspeed-minwidth = 5
+%downspeed.min% = 5
+%upspeed.min% = 5
 
 ; Accumulate values from all interfaces
 ; when querying for up/downspeed rate
