--- a/.config/polybar/modules/packages.ini
+++ b/.config/polybar/modules/packages.ini
@@ -1,6 +1,6 @@
 [module/packages]
 type = custom/script
-exec = pacman -Qu | wc -l
+exec = xbps-install -nuM | wc -l
 interval = 60
 format = <label>
 format-prefix = ${packages.fp}
