Change email adress

--- a/.config/git/config
+++ b/.config/git/config
@@ -1,6 +1,6 @@
 [user]
 	name = Demis Balbach
-	email = demisbalbach@googlemail.com
+	email = db@minikn.xyz
 	signingKey = F17DDB98CC3C405C
 [commit]
 	gpgSign = true
