Change path temporarily

--- a/.local/share/gnupg/gpg-agent.conf
+++ b/.local/share/gnupg/gpg-agent.conf
@@ -1,2 +1,3 @@
-pinentry-program /bin/pinentry-emacs
+pinentry-program $BINDIR/pinentry.sh
+pinentry-program /usr/local/bin/pinentry-emacs
 enable-ssh-support
