Replace sound with pulseaudio module; Fix network module

--- a/.config/polybar/bar-single.ini
+++ b/.config/polybar/bar-single.ini
@@ -135,7 +135,7 @@ module-margin-right = 2
 
 modules-left = exwm
 ;modules-center = exwm
-modules-right = packages network space cpu memory temperature alsa battery date
+modules-right = packages network network_down space cpu memory temperature battery pulseaudio date
 
 ; The separator will be inserted between the output of each module
 separator =
