Uncomment deprecated option

--- a/.config/polybar/modules/network.ini
+++ b/.config/polybar/modules/network.ini
@@ -2,8 +2,8 @@
 type = internal/network
 interface = enp3s0
 interval = 3.0
-%downspeed.min% = 5
-%upspeed.min% = 5
+#%downspeed.min% = 5
+#%upspeed.min% = 5
 accumulate-stats = true
 unknown-as-up = true
 format-connected = <label-connected>
