--- a/.config/polybar/bar-single.ini
+++ b/.config/polybar/bar-single.ini
@@ -135,7 +135,7 @@ module-margin-right = 2
 
 modules-left = exwm
 ;modules-center = exwm
-modules-right = packages network network_down space cpu memory temperature battery pulseaudio date
+modules-right = packages network space cpu memory temperature pulseaudio date
 
 ; The separator will be inserted between the output of each module
 separator =
@@ -166,7 +166,7 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = center
+tray-position = right
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
@@ -175,17 +175,11 @@ tray-detached = false
 ; Tray icon max size
 tray-maxsize = 16
 
-; DEPRECATED! Since 3.3.0 the tray always uses pseudo-transparency
-; Enable pseudo transparency
-; Will automatically be enabled if a fully transparent
-; background color is defined using `tray-background`
-tray-transparent = false
-
 ; Background color for the tray container
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
-;;;;;;tray-background = ${root.background}
+tray-background = ${root.background}
 
 ; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 tray-offset-x = 0
