--- a/.config/polybar/bar-single.ini
+++ b/.config/polybar/bar-single.ini
@@ -155,7 +155,7 @@ wm-name =
 
 ; Locale used to localize various module data (e.g. date)
 ; Expects a valid libc locale, for example: sv_SE.UTF-8
-locale =
+locale = de_DE.UTF-8
 
 ; Position of the system tray window
 ; If empty or undefined, tray support will be disabled
@@ -179,7 +179,7 @@ tray-maxsize = 16
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
-tray-background = ${root.background}
+;tray-background = ${root.background}
 
 ; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 tray-offset-x = 0
