Switch to dual monitor setup again

--- a/.config/polybar/bar-right.ini
+++ b/.config/polybar/bar-right.ini
@@ -20,11 +20,15 @@ include-file = /home/demis/.config/polybar/modules/network.ini
 ;; Bar Settings
 
 [bar/right]
+
+font-0 = ${fonts.font-0}
+font-1 = ${fonts.font-1}
+
 ; Use either of the following command to list available outputs:
 ; If unspecified, the application will pick the first one it finds.
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-monitor = DP-0.1.8
+monitor = HDMI-0
 
 ; Use the specified monitor as a fallback if the main one is not found.
 monitor-fallback =
@@ -132,7 +136,7 @@ module-margin-right = 2
 
 ;modules-left = alsa
 ;modules-center = exwm
-modules-right = packages network space cpu memory temperature alsa date
+modules-right = packages network space cpu memory temperature pulseaudio date
 
 ; The separator will be inserted between the output of each module
 separator =
