--- a/.config/polybar/bar-left.ini
+++ b/.config/polybar/bar-left.ini
@@ -20,11 +20,15 @@ include-file = /home/demis/.config/polybar/modules/network.ini
 ;; Bar Settings
 
 [bar/left]
+
+font-0 = ${fonts.font-0}
+font-1 = ${fonts.font-1}
+
 ; Use either of the following command to list available outputs:
 ; If unspecified, the application will pick the first one it finds.
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-monitor = DP-0.8
+monitor = DP-0
 
 ; Use the specified monitor as a fallback if the main one is not found.
 monitor-fallback =
