--- a/.config/polybar/bar-right.ini
+++ b/.config/polybar/bar-right.ini
@@ -156,7 +156,7 @@ wm-name =
 
 ; Locale used to localize various module data (e.g. date)
 ; Expects a valid libc locale, for example: sv_SE.UTF-8
-locale =
+locale = de_DE.UTF-8
 
 ; Position of the system tray window
 ; If empty or undefined, tray support will be disabled
@@ -167,7 +167,7 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = none
+tray-position = right
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
@@ -175,12 +175,6 @@ tray-detached = false
 
 ; Tray icon max size
 tray-maxsize = 16
-
-; DEPRECATED! Since 3.3.0 the tray always uses pseudo-transparency
-; Enable pseudo transparency
-; Will automatically be enabled if a fully transparent
-; background color is defined using `tray-background`
-tray-transparent = false
 
 ; Background color for the tray container
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
@@ -211,7 +205,7 @@ tray-scale = 1.0
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
-; dpi =
+dpi = 123.41
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
