--- a/.config/polybar/common.ini
+++ b/.config/polybar/common.ini
@@ -27,15 +27,15 @@ margin-top = 0
 ;; File Inclusion
 ; include an external file, like module file, etc.
 
-include-file = /home/demis/.config/polybar/modules/exwm.ini
-include-file = /home/demis/.config/polybar/modules/pulseaudio.ini
-include-file = /home/demis/.config/polybar/modules/date.ini
-include-file = /home/demis/.config/polybar/modules/temperature.ini
-include-file = /home/demis/.config/polybar/modules/memory.ini
-include-file = /home/demis/.config/polybar/modules/cpu.ini
-include-file = /home/demis/.config/polybar/modules/space.ini
-include-file = /home/demis/.config/polybar/modules/packages.ini
-include-file = /home/demis/.config/polybar/colors.ini
+include-file = /home/db/.config/polybar/modules/exwm.ini
+include-file = /home/db/.config/polybar/modules/pulseaudio.ini
+include-file = /home/db/.config/polybar/modules/date.ini
+include-file = /home/db/.config/polybar/modules/temperature.ini
+include-file = /home/db/.config/polybar/modules/memory.ini
+include-file = /home/db/.config/polybar/modules/cpu.ini
+include-file = /home/db/.config/polybar/modules/space.ini
+include-file = /home/db/.config/polybar/modules/packages.ini
+include-file = /home/db/.config/polybar/colors.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
