--- a/.config/polybar/bar-right.ini
+++ b/.config/polybar/bar-right.ini
@@ -12,10 +12,10 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ;; Includes
-include-file = /home/demis/.config/polybar/common.ini
-include-file = /home/demis/.config/polybar/fonts/fonts-bitmap.ini
-include-file = /home/demis/.config/polybar/icons/icons-bitmap.ini
-include-file = /home/demis/.config/polybar/modules/network.ini
+include-file = /home/db/.config/polybar/common.ini
+include-file = /home/db/.config/polybar/fonts/fonts-bitmap.ini
+include-file = /home/db/.config/polybar/icons/icons-bitmap.ini
+include-file = /home/db/.config/polybar/modules/network.ini
 
 ;; Bar Settings
 
